--- a/src/ALB.Ui/Components/Account/Pages/Login.razor
+++ b/src/ALB.Ui/Components/Account/Pages/Login.razor
@@ -1,8 +1,10 @@
 ﻿@page "/Account/Login"
 
 @using System.ComponentModel.DataAnnotations
+@using ALB.Application.UseCases.Auths
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Session
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
